# university

./: CMakeLists.txt  SetCoveProblem.h  backpack_algo.h  interface.h  main.cpp  pareto.h
